MODON MRE BPDEV/force-app/main/default/objects/Invoice_Line__c/Invoice_Line__c.object-meta.xml
<CustomObject>
    <label>Invoice Line</label>
    <nameField>
        <displayFormat>INVL-{0000}</displayFormat>
        <label>Invoice Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>