MODON MRE BPDEV/force-app/main/default/objects/Invoice_Line__c/fields/Category_Of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Category_Of_Sale__c</fullName>
    <formula>Commission_Line__r.Category_Of_Sale__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Of Sale</label>
    <type>Text</type>
</CustomField>