MODON MRE BPDEV/force-app/main/default/objects/Invoice_Line__c/fields/Commission_Amount_Already_Paid__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount_Already_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commission Amount Already Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>