MODON MRE BPDEV/force-app/main/default/objects/Invoice_Line__c/fields/Commission_Line__c.field-meta.xml
<CustomField>
    <fullName>Commission_Line__c</fullName>
    <label>Commission Line</label>
    <referenceTo>Commission_Line__c</referenceTo>
    <relationshipLabel>Invoice Line</relationshipLabel>
    <relationshipName>Invoice_Line</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>