MODON MRE BPDEV/force-app/main/default/objects/Invoice_Line__c/fields/Commission_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Commission_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission Line Item</label>
    <referenceTo>Commission_Line_Item__c</referenceTo>
    <relationshipLabel>Invoice Line</relationshipLabel>
    <relationshipName>Invoice_Line</relationshipName>
    <type>Lookup</type>
</CustomField>