MODON MRE BPDEV/force-app/main/default/objects/Invoice_Line__c/fields/Commission_Line_Name__c.field-meta.xml
<CustomField>
    <fullName>Commission_Line_Name__c</fullName>
    <formula>Commission_Line__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Line Name</label>
    <type>Text</type>
</CustomField>