MODON MRE BPDEV/force-app/main/default/objects/Invoice_Line__c/fields/Commission_Payout_Percent__c.field-meta.xml
<CustomField>
    <fullName>Commission_Payout_Percent__c</fullName>
    <formula>Commission_Line_Item__r.Commission_Payout_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Payout Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>