MODON MRE BPDEV/force-app/main/default/objects/Invoice_Line__c/fields/Current_Commission_Payout_Now__c.field-meta.xml
<CustomField>
    <fullName>Current_Commission_Payout_Now__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Current Commission Payout Now</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>