MODON MRE BPDEV/force-app/main/default/objects/Invoice_Line__c/fields/Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Hold_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hold Reason</label>
    <type>TextArea</type>
</CustomField>