MODON MRE BPDEV/force-app/main/default/objects/Invoice_Line__c/fields/Invoice_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Bundle__c</fullName>
    <label>Invoice Bundle</label>
    <referenceTo>Invoice_Bundle__c</referenceTo>
    <relationshipLabel>Invoice Line</relationshipLabel>
    <relationshipName>Invoice_Line</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>