MODON MRE BPDEV/force-app/main/default/objects/Invoice_Line__c/fields/Month_Of_Sales__c.field-meta.xml
<CustomField>
    <fullName>Month_Of_Sales__c</fullName>
    <formula>Invoice_Bundle__r.Commission_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Month</label>
    <type>Text</type>
</CustomField>