MODON MRE BPDEV/force-app/main/default/objects/Invoice_Line__c/fields/POT_Member__c.field-meta.xml
<CustomField>
    <fullName>POT_Member__c</fullName>
    <formula>Commission_Line_Item__r.Commission_Line__r.Commission_POT_Member__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POT Member</label>
    <type>Text</type>
</CustomField>