MODON MRE BPDEV/force-app/main/default/objects/Invoice_Line__c/fields/POT_Type__c.field-meta.xml
<CustomField>
    <fullName>POT_Type__c</fullName>
    <formula>Commission_Line_Item__r.Commission_Line__r.POT_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POT Type</label>
    <type>Text</type>
</CustomField>