MODON MRE BPDEV/force-app/main/default/objects/Invoice_Line__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <formula>Commission_Line__r.Sales_Manager__r.FirstName+&apos; &apos;+Commission_Line__r.Sales_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Manager</label>
    <type>Text</type>
</CustomField>