MODON MRE BPDEV/force-app/main/default/objects/Invoice_Line__c/fields/Total_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>