MODON MRE BPDEV/force-app/main/default/objects/Invoice_Line__c/fields/Type_Of_Commission__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Commission__c</fullName>
    <formula>TEXT(Commission_Line__r.Commission_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Of Commission</label>
    <type>Text</type>
</CustomField>