MODON MRE BPDEV/force-app/main/default/objects/Invoice_Line__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>UniqueKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>