MODON MRE BPDEV/force-app/main/default/objects/Invoice_Line__c/fields/Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Unit_Name__c</fullName>
    <formula>Commission_Line__r.Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Name</label>
    <type>Text</type>
</CustomField>