MODON MRE BPDEV/force-app/main/default/objects/Invoice_Line__c/validationRules/On_Hold_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>On_Hold_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Is_Hold__c == true, Invoice_Bundle__r.Override_Payout_Amount__c &gt; 0)</errorConditionFormula>
    <errorMessage>You cannot place a hold on a commission that has already been overridden from the actual commission amount!</errorMessage>
</ValidationRule>